tests/NormalTests/paczka1/fuzzy1/98758627.err
Error in line 6: fosxpyiqFTL S53 41,08
Error in line 5: fosxpyiqFTL S53 83,6
Error in line 11: fosxpyiqFTL S626 59,7
Error in line 15: fosxpyiqFTL S53 82,4
Error in line 18: fosxpyiqFTL S626 75,9
Error in line 17: clDZyTwDG S53 88,3
